# dmlflask

./: .gitattributes  .gitignore  README.md  Todo.md  dev.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
src/: .flaskenv  app.db  babel.pot  config.py  dmlmicro.py  tests.py
src/app/: __init__.py  celeryjobs.py  cli.py  email.py  models.py  search.py  tasks.py  translate.py  types.py
src/app/auth/: email.py  forms.py  routes.py
src/app/errors/: handlers.py
src/app/imagesearch/: __init__.py  webstreaming.py
src/app/main/: __init__.py  forms.py  routes.py
src/app/templates/: _post.html  _posts.html  base.html  edit_profile.html  messages.html  navbar.html  search.html  send_message.html  user.html  user_popup.html
src/app/templates/auth/: login.html  register.html  reset_password.html  reset_password_request.html
src/app/templates/errors/: 500.html
src/app/templates/imagesearch/: index.html
src/app/templates/main/: home.html  index.html
src/app/translations/es/LC_MESSAGES/: messages.po
src/migrations/: env.py
src/migrations/versions/: 1820fc689f37_users_table.py
src2/: webstreaming.py
src2/pyimagesearch/motion_detection/: __init__.py  motiondetector.py
